--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'">'+e+'<\/'+'a'+'>');
 </dl>
 <h2 id="open-source-projects">Open Source Projects</h2>
 <dl>
+<dt>2014– <a href="https://github.com/spoqa/geofront">Geofront</a></dt>
+<dd><p>Simple SSH key management service which helps to maintain servers to SSH, and <code>authorized_keys</code> list for them.</p>
+</dd>
 <dt>2013– <a href="http://earthreader.org/">Earth Reader</a></dt>
 <dd><p>News reader that is possible to run on various devices and be synchronized without any particular centralized proprietary services.</p>
 </dd>
